Translate event description to Korean
Translated the description of an event from English to Korean.

Signed-off-by: ☁️dungsil <git+commit@younggeon.kim>

--- a/ck3/VIET/mod/localization/korean/___viet_old_events_l_korean.yml
+++ b/ck3/VIET/mod/localization/korean/___viet_old_events_l_korean.yml
@@ -1474,7 +1474,7 @@
   VIETold.2023.c: "쥐들은 우리의 형제자매이니 존중해야 합니다." # 10479054722934181790
   VIETold.2023.d: "걱정스러운 광경이로군! 우리는 경계를 늦추어서는 안 되오." # 15258001679269358537
   VIETold.2024.t: "현장에서" # 5891711593393713515
-  VIETold.2024.desc: "I was bored at home with nothing to do one day, so I decided to take a walk around when I overheard some muffled sounds coming from a room. I snuck over and opened the door slightly, and peeked inside. One of my maids and one of my manservants were making love and in the throes of passion, oblivious to the world around them! Though young, they should know better." # 1953145155800896851
+  VIETold.2024.desc: "어느 날 집에서 할 일 없이 심심하던 차에 산책이나 할까 하고 돌아다니다가, 한 방에서 작게 웅얼거리는 소리가 들려왔다. 살금살금 다가가 문을 살짝 열고 안을 엿보았더니, 내 하녀 하나와 하인 하나가 사랑을 나누고 있었다. 열정에 휩싸여 주변 세상은 안중에도 없는 듯했다! 비록 젊다지만, 분별은 있어야 할 텐데." # 1953145155800896851
   VIETold.2024.a: "끼어들어서 그들이 공개적으로 이 짓을 멈추라고 명령하시오." # 6218794501416059304
   VIETold.2024.b: "몰래 그들을 간절히 지켜보되, 그들에게는 말하지 마시오." # 12023473819285449618
   VIETold.2024.c: "잊어버리겠소. 내 알 바 아니지." # 12131888461374636184
